[package]
name = "rspoti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
rspotify = "0.11.6"
env_logger = "0.8"
serde="1.0.152"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
derive_more = "0.99.17"
